tests/type_errors/minimum_bool.nos
# expect_error: does not implement Ord
main() = [true, false, true].minimum()
